samples/_failures_safe/1761597936_ed0922_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17402968.c: In function ‘main’:
./samples/SAFE/__tmp_17402968.c:162:5: error: expected expression at end of input
  162 |     dijkstra(&g,
      |     ^~~~~~~~
./samples/SAFE/__tmp_17402968.c:162:5: error: expected declaration or statement at end of input
